--- a/templates/main.html
+++ b/templates/main.html
@@ -27,10 +27,15 @@
     <div class="row">
         {% block votes %}
         {% endblock %}
-        {% block addanswers %}
-        {% endblock %}
         {% block vote %}
         {% endblock %}
+        {% block addanswers %}
+        {% endblock %}
     </div>
+<div class="footer" style=" background: #222222; text-align: center; padding: 20px 0 2px 0; bottom: 0px; position: relative; width: 100%;">
+    <p style="color: #FFFFFF; font-size: 11px">2015. © http://127.0.0.1:8000<br>
+        Сайт голосования &laquo;localhost:8000&raquo;<br>
+        Шипилов Александр и Проскурякова Виктория</p>
+</div>
 </body>
 </html>
