--- a/vote/templates/vote/votes.html
+++ b/vote/templates/vote/votes.html
@@ -12,7 +12,7 @@
     {% for vote in votes %}
     <tr>
         <td>
-            <a href = "/vote/get/{{ vote.id }}"> {{ vote.question }}</a>
+            <a href = "/vote/get/{{ vote.id }}/"> {{ vote.question }}</a>
         </td>
     </tr>
     {% endfor %}
