--- a/vote/templates/vote/addanswers.html
+++ b/vote/templates/vote/addanswers.html
@@ -1,9 +1,24 @@
 {% extends 'main.html' %}
 {% load staticfiles %}
 
-{% block andanswers %}
+{% block addanswers %}
     <div class="large-8  columns">
-    <h1> {{ vote.question }}</h1>
-    <h1> hello </h1>
+    <h3> {{ vote.question }}</h3>
+    <h6> {{ vote.date }}</h6>
+    <table border="1">
+            {% for answer in answers %}
+                <tr>
+                    <td>
+                        {{ answer.text }}
+                    </td>
+                </tr>
+            {% endfor %}
+        </table>
+     <form action="/vote/addanswers/{{ vote.id }}/" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit" class="button" value="Добавить голосование">
+        </form>
+    <button><a href = "/"> Готово</a></button>
     </div>
 {% endblock %}
