--- a/loginsys/templates/login.html
+++ b/loginsys/templates/login.html
@@ -13,6 +13,7 @@
             <label for = "username">Имя пользователя</label>
             {% endif %}
             <input class="button" type="submit" value="Войти">
+            <div  class = "label secondary"><a href="/auth/register/">Регистрация</a></div>
         </form>
     </div>
 {% endblock%}
