--- a/vote/templates/vote/addanswers.html
+++ b/vote/templates/vote/addanswers.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 {% load staticfiles %}
 
-{% block addanswers %}
+{% block vote %}
     <div class="large-8  columns">
     <h3> {{ vote.question }}</h3>
     <h6> {{ vote.date }}</h6>
@@ -17,7 +17,7 @@
      <form action="/vote/addanswers/{{ vote.id }}/" method="post">
             {% csrf_token %}
             {{ form }}
-            <input type="submit" class="button" value="Добавить голосование">
+            <input type="submit" class="button" value="Добавить ответ">
         </form>
     <button><a href = "/"> Готово</a></button>
     </div>
