--- a/vote/templates/vote/vote.html
+++ b/vote/templates/vote/vote.html
@@ -23,15 +23,18 @@
                     {% endfor %}
         </table>
         {% else %}
-            <table border="1">
-                {% for answer in answers %}
-                    <tr>
-                        <td>
-                            {{ answer.text }}
-                        </td>
-                    </tr>
-                {% endfor %}
-            </table>
+            <form method="get" action="">
+                {% csrf_token %}
+                <table border="1">
+                    <fieldset>
+                        <legend>{{ vote.question }}</legend>
+                        {% for answer in answers %}
+                            <label><input type="checkbox" name="{{ answer.id }}"> {{ answer.text }}</label>
+                        {% endfor %}
+                    </fieldset>
+                    <input type="submit" value="Голосовать">
+                </table>
+            </form>
         <p  style="color: darkblue;text-align: center; width:83.5% ">
             <a href="/vote/addanswer/{{ vote.id }}/">
                 <button>
