--- a/templates/main.html
+++ b/templates/main.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <script src="https://www.google.com/jsapi"></script>
     <title>Голосуй прост0)00))</title>
     <link rel="stylesheet" type = "text/css" href="{% static "static/css/foundation.css" %}">
 </head>
